[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Scripts/ObjectBaseWithoutSprite.gd" type="Script" id=1]

[node name="ClickableObject" type="Node2D" groups=[
"interactable",
]]
script = ExtResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="Shape" type="CollisionPolygon2D" parent="CollisionArea"]
[connection signal="mouse_entered" from="CollisionArea" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="CollisionArea" to="." method="_mouse_exited"]
